# sweety-stash

./: .replit  Procfile  README.md  app.py  pyproject.toml  replit.md  requirements.txt  run.sh
.streamlit/: config.toml
templates/: index.html
