# This minimal configuration satisfies the requirement for a pyproject.toml
# but prevents the build system from attempting to create a formal Python package.
# This is the correct approach for deploying simple, script-based Streamlit apps.

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"