# This configuration satisfies the installer's need for a defined project
# while remaining minimal for a Streamlit app that is executed directly
# via the Procfile, not installed as a library.

[project]
name = "my-streamlit-app"
version = "0.0.1"
description = "A simple Streamlit application"
requires-python = ">=3.9"

# Dependencies should still be listed in requirements.txt
dependencies = [
    # No need to list dependencies here if you use requirements.txt,
    # but the array must exist.
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"